--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <title>ZAKER - مكتبة ذاكر</title>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Cairo', sans-serif; background-color: #f4f7f6; margin: 0; padding: 0; color: #333; }
-        header { background: linear-gradient(135deg, #2c3e50, #3498db); color: white; padding: 30px 20px; text-align: center; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-        .logo { width: 120px; height: auto; border-radius: 50%; border: 3px solid white; background: white; margin-bottom: 15px; box-shadow: 0 4px 8px rgba(0,0,0,0.2); }
-        .container { padding: 15px; max-width: 800px; margin: auto; }
-        .hero { background: white; padding: 20px; border-radius: 15px; text-align: center; margin-bottom: 20px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
-        .category-title { color: #2c3e50; border-right: 5px solid #3498db; padding-right: 10px; margin: 25px 0 15px; font-size: 1.5rem; }
-        .product-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; }
-        .product-card { background: white; padding: 15px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); text-align: center; transition: 0.3s; display: flex; flex-direction: column; justify-content: space-between; }
-        .product-card:active { transform: scale(0.95); }
+        :root { --primary-color: #2c3e50; --secondary-color: #3498db; --accent-color: #27ae60; }
+        body { font-family: 'Cairo', sans-serif; background-color: #f8f9fa; margin: 0; padding: 0; color: #333; }
+        header { background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: white; padding: 30px 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
+        .logo { width: 100px; height: 100px; border-radius: 50%; border: 3px solid white; background: white; margin-bottom: 15px; object-fit: cover; }
+        .container { padding: 15px; max-width: 900px; margin: auto; }
+        .hero { background: white; padding: 20px; border-radius: 15px; text-align: center; margin-bottom: 25px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
+        .category-title { color: var(--primary-color); border-right: 5px solid var(--secondary-color); padding-right: 15px; margin: 30px 0 20px; font-size: 1.4rem; font-weight: bold; }
+        .product-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: 15px; }
+        .product-card { background: white; padding: 15px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); text-align: center; display: flex; flex-direction: column; }
+        .product-img { width: 100%; height: 160px; border-radius: 8px; object-fit: cover; background: #fdfdfd; margin-bottom: 10px; }
         .product-card h3 { font-size: 16px; margin: 10px 0; color: #444; }
-        .price { color: #27ae60; font-weight: bold; display: block; margin-bottom: 10px; font-size: 1.1rem; }
-        .order-btn { background-color: #25d366; color: white; border: none; padding: 10px 15px; border-radius: 8px; cursor: pointer; text-decoration: none; font-size: 14px; display: inline-block; font-weight: bold; }
-        footer { background: #2c3e50; text-align: center; padding: 25px; margin-top: 40px; font-size: 13px; color: white; }
-        .location { color: #e74c3c; font-size: 14px; margin-top: 10px; font-weight: bold; }
+        .price-box { margin-bottom: 15px; background: #f0f4f8; padding: 5px; border-radius: 8px; }
+        .price { color: var(--accent-color); font-weight: bold; display: block; font-size: 1rem; }
+        .order-btn { background-color: #25d366; color: white; border: none; padding: 10px; border-radius: 8px; cursor: pointer; text-decoration: none; font-size: 13px; display: block; font-weight: bold; margin-top: 5px; }
+        .btn-blue { background-color: #3498db; }
+        footer { background: var(--primary-color); text-align: center; padding: 30px; margin-top: 50px; color: white; font-size: 14px; }
     </style>
 </head>
 <body>
@@ -33,42 +35,50 @@
 <div class="container">
     <div class="hero">
         <h3>أهلاً بك في مكتبة ذاكر</h3>
-        <p>كل ما يحتاجه الطالب في مكان واحد</p>
-        <div class="location">📍 مدينة السلام، القاهرة</div>
+        <p>نوفر لكم أفضل الأدوات التعليمية بأفضل الأسعار</p>
+        <div style="color: #e74c3c; font-weight: bold;">📍 مدينة السلام، القاهرة</div>
+    </div>
+
+    <h2 class="category-title">أدوات مكتبية وقرطاسية</h2>
+    <div class="product-grid">
+        
+        <div class="product-card">
+            <img src="https://i.ibb.co/Jv89xW6v/1000412346.jpg" class="product-img" alt="مسطرة شفافة">
+            <h3>مسطرة بلاستيك شفافة</h3>
+            <div class="price-box">
+                <span class="price">20 سم: 5 ج.م</span>
+                <span class="price">30 سم: 10 ج.م</span>
+            </div>
+            <a href="https://wa.me/201027021011?text=أريد طلب مسطرة شفافة مقاس 20 سم" class="order-btn btn-blue">طلب مقاس 20 سم</a>
+            <a href="https://wa.me/201027021011?text=أريد طلب مسطرة شفافة مقاس 30 سم" class="order-btn">طلب مقاس 30 سم</a>
+        </div>
+
+        <div class="product-card">
+            <img src="https://via.placeholder.com/150?text=Zaker+Library" class="product-img" alt="منتج">
+            <h3>منتجات أخرى</h3>
+            <div class="price-box">
+                <span class="price">اسأل عن السعر</span>
+            </div>
+            <a href="https://wa.me/201027021011?text=أريد الاستفسار عن المنتجات المتاحة" class="order-btn">استفسار واتساب</a>
+        </div>
+
     </div>
 
     <h2 class="category-title">الكتب الخارجية</h2>
     <div class="product-grid">
         <div class="product-card">
-            <h3>كتب جميع المراحل</h3>
-            <span class="price">تواصل للسعر</span>
-            <a href="https://wa.me/201027021011?text=أريد الاستفسار عن الكتب الخارجية المتاحة" class="order-btn">اطلب عبر واتساب</a>
-        </div>
-        <div class="product-card">
-            <h3>ملازم وشيتات</h3>
-            <span class="price">حسب الطلب</span>
-            <a href="https://wa.me/201027021011?text=أريد طلب تصوير أو طباعة ملازم" class="order-btn">اطلب عبر واتساب</a>
-        </div>
-    </div>
-
-    <h2 class="category-title">أدوات مكتبية وقرطاسية</h2>
-    <div class="product-grid">
-        <div class="product-card">
-            <h3>أقلام وأدوات كتابة</h3>
-            <span class="price">أسعار متفاوتة</span>
-            <a href="https://wa.me/201027021011?text=أريد طلب أدوات مكتبية" class="order-btn">اطلب عبر واتساب</a>
-        </div>
-        <div class="product-card">
-            <h3>كشاكيل ونوت بوك</h3>
-            <span class="price">أسعار متفاوتة</span>
-            <a href="https://wa.me/201027021011?text=أريد طلب كشاكيل" class="order-btn">اطلب عبر واتساب</a>
+            <img src="https://via.placeholder.com/150?text=Books" class="product-img" alt="كتب">
+            <h3>كتب جميع المراحل التعليمية</h3>
+            <div class="price-box">
+                <span class="price">متوفرة الآن</span>
+            </div>
+            <a href="https://wa.me/201027021011?text=أريد طلب كتب خارجية" class="order-btn">اطلب الكتاب الآن</a>
         </div>
     </div>
 </div>
 
 <footer>
     <p>جميع الحقوق محفوظة لمكتبة ZAKER &copy; 2026</p>
-    <p>نتشرف بزيارتكم في مدينة السلام</p>
 </footer>
 
 </body>
