--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         .product-card { background: white; padding: 15px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); text-align: center; display: flex; flex-direction: column; }
         .product-img { width: 100%; height: 160px; border-radius: 8px; object-fit: cover; background: #fdfdfd; margin-bottom: 10px; }
         .product-card h3 { font-size: 16px; margin: 10px 0; color: #444; }
-        .price-box { margin-bottom: 15px; background: #f0f4f8; padding: 5px; border-radius: 8px; }
+        .price-box { margin-bottom: 15px; background: #f0f4f8; padding: 5px; border-radius: 8px; flex-grow: 1; }
         .price { color: var(--accent-color); font-weight: bold; display: block; font-size: 1rem; }
         .order-btn { background-color: #25d366; color: white; border: none; padding: 10px; border-radius: 8px; cursor: pointer; text-decoration: none; font-size: 13px; display: block; font-weight: bold; margin-top: 5px; }
         .btn-blue { background-color: #3498db; }
@@ -54,12 +54,13 @@
         </div>
 
         <div class="product-card">
-            <img src="https://via.placeholder.com/150?text=Zaker+Library" class="product-img" alt="منتج">
-            <h3>منتجات أخرى</h3>
+            <img src="https://i.ibb.co/RZhq66L/image.jpg" class="product-img" alt="أقلام جاف وسنون">
+            <h3>أقلام جاف وسنون متنوعة</h3>
             <div class="price-box">
+                <span class="price">تشكيلة مميزة</span>
                 <span class="price">اسأل عن السعر</span>
             </div>
-            <a href="https://wa.me/201027021011?text=أريد الاستفسار عن المنتجات المتاحة" class="order-btn">استفسار واتساب</a>
+            <a href="https://wa.me/201027021011?text=أريد الاستفسار عن أسعار الأقلام المتاحة في الصورة" class="order-btn">استفسار واتساب</a>
         </div>
 
     </div>
