--- a/index.html
+++ b/index.html
@@ -8,65 +8,46 @@
     <style>
         :root { --primary-color: #2c3e50; --secondary-color: #3498db; --accent-color: #27ae60; }
         body { font-family: 'Cairo', sans-serif; background-color: #f8f9fa; margin: 0; padding: 0; color: #333; }
-        header { background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: white; padding: 30px 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
-        .logo { width: 100px; height: 100px; border-radius: 50%; border: 3px solid white; background: white; margin-bottom: 15px; object-fit: cover; }
-        .container { padding: 15px; max-width: 900px; margin: auto; }
-        .hero { background: white; padding: 20px; border-radius: 15px; text-align: center; margin-bottom: 25px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
-        .category-title { color: var(--primary-color); border-right: 5px solid var(--secondary-color); padding-right: 15px; margin: 30px 0 20px; font-size: 1.4rem; font-weight: bold; }
-        .product-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: 15px; }
-        .product-card { background: white; padding: 15px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); text-align: center; display: flex; flex-direction: column; }
-        .product-img { width: 100%; height: 160px; border-radius: 8px; object-fit: cover; background: #fdfdfd; margin-bottom: 10px; }
-        .product-card h3 { font-size: 16px; margin: 10px 0; color: #444; }
-        .price-box { margin-bottom: 15px; background: #f0f4f8; padding: 5px; border-radius: 8px; }
-        .price { color: var(--accent-color); font-weight: bold; display: block; font-size: 1rem; }
-        .order-btn { background-color: #25d366; color: white; border: none; padding: 10px; border-radius: 8px; cursor: pointer; text-decoration: none; font-size: 13px; display: block; font-weight: bold; margin-top: 5px; }
-        .btn-blue { background-color: #3498db; }
-        footer { background: var(--primary-color); text-align: center; padding: 30px; margin-top: 50px; color: white; font-size: 14px; }
+        header { background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: white; padding: 25px 15px; text-align: center; }
+        .logo { width: 90px; height: 90px; border-radius: 50%; border: 3px solid white; background: white; margin-bottom: 10px; object-fit: cover; }
+        .container { padding: 15px; max-width: 800px; margin: auto; }
+        .category-title { color: var(--primary-color); border-right: 5px solid var(--secondary-color); padding-right: 15px; margin: 25px 0 15px; font-weight: bold; }
+        .product-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 15px; }
+        .product-card { background: white; padding: 10px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); text-align: center; }
+        .product-img { width: 100%; height: 140px; border-radius: 8px; object-fit: cover; margin-bottom: 10px; }
+        .product-name { font-size: 15px; font-weight: bold; margin: 5px 0; color: #444; }
+        .price-list { background: #f9f9f9; padding: 5px; border-radius: 6px; margin: 8px 0; }
+        .price-item { font-size: 13px; color: var(--accent-color); font-weight: bold; display: block; }
+        .order-btn { background-color: #25d366; color: white; border: none; padding: 8px; border-radius: 6px; text-decoration: none; font-size: 13px; display: block; font-weight: bold; margin-top: 10px; }
+        footer { text-align: center; padding: 20px; color: #888; font-size: 12px; }
     </style>
 </head>
 <body>
 
 <header>
     <img src="https://i.ibb.co/JjGYxZSd/logo.png" alt="ZAKER Logo" class="logo">
-    <h1>ZAKER - ذاكر</h1>
-    <p>أدوات مكتبية • قرطاسية • كتب خارجية</p>
+    <h1>ZAKER - مكتبة ذاكر</h1>
 </header>
 
 <div class="container">
-    <div class="hero">
-        <h3>أهلاً بك في مكتبة ذاكر</h3>
-        <p>كل ما يحتاجه الطالب من أدوات في مكان واحد</p>
-        <div style="color: #e74c3c; font-weight: bold;">📍 مدينة السلام، القاهرة</div>
-    </div>
-
-    <h2 class="category-title">أدوات مكتبية وقرطاسية</h2>
+    <h2 class="category-title">أدوات مكتبية</h2>
     <div class="product-grid">
         
         <div class="product-card">
-            <img src="https://i.ibb.co/Jv89xW6v/1000412346.jpg" class="product-img" alt="مسطرة شفافة">
-            <h3>مسطرة بلاستيك شفافة</h3>
-            <div class="price-box">
-                <span class="price">20 سم: 5 ج.م</span>
-                <span class="price">30 سم: 10 ج.م</span>
+            <img src="https://i.ibb.co/RZhq66L/image.jpg" class="product-img" alt="مسطرة شفافة">
+            <div class="product-name">مسطرة بلاستيك شفافة</div>
+            <div class="price-list">
+                <span class="price-item">مقاس 20 سم: 5 ج.م</span>
+                <span class="price-item">مقاس 30 سم: 10 ج.م</span>
             </div>
-            <a href="https://wa.me/201027021011?text=أريد طلب مسطرة شفافة مقاس 20 سم" class="order-btn btn-blue">طلب مقاس 20 سم</a>
-            <a href="https://wa.me/201027021011?text=أريد طلب مسطرة شفافة مقاس 30 سم" class="order-btn">طلب مقاس 30 سم</a>
+            <a href="https://wa.me/201027021011?text=أريد طلب مسطرة شفافة" class="order-btn">اطلب واتساب</a>
         </div>
 
-    </div>
-
-    <h2 class="category-title">الكتب الخارجية</h2>
-    <div class="product-grid">
-        <div class="product-card">
-            <h3>كتب جميع المراحل</h3>
-            <p style="font-size: 14px; color: #666;">تواصل معنا لمعرفة الكتب المتاحة وأسعارها</p>
-            <a href="https://wa.me/201027021011?text=أريد الاستفسار عن الكتب الخارجية" class="order-btn">استفسار واتساب</a>
-        </div>
     </div>
 </div>
 
 <footer>
-    <p>جميع الحقوق محفوظة لمكتبة ZAKER &copy; 2026</p>
+    <p>مكتبة ذاكر - مدينة السلام &copy; 2026</p>
 </footer>
 
 </body>
