--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
         body { font-family: 'Cairo', sans-serif; background-color: #f8f9fa; margin: 0; padding: 0; color: #333; }
         header { background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: white; padding: 25px 15px; text-align: center; }
         .logo { width: 80px; height: 80px; border-radius: 50%; border: 3px solid white; background: white; margin-bottom: 10px; object-fit: cover; }
-        .container { padding: 15px; max-width: 800px; margin: auto; }
-        .category-title { color: var(--primary-color); border-right: 5px solid var(--secondary-color); padding-right: 15px; margin: 25px 0 15px; font-weight: bold; }
+        .container { padding: 15px; max-width: 900px; margin: auto; }
+        .category-title { color: var(--primary-color); border-right: 5px solid var(--secondary-color); padding-right: 15px; margin: 30px 0 20px; font-weight: bold; font-size: 1.4rem; }
         .product-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; }
-        .product-card { background: white; padding: 15px; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); text-align: center; }
-        .product-img { width: 100%; height: auto; border-radius: 10px; margin-bottom: 15px; }
-        .product-name { font-size: 18px; font-weight: bold; margin-bottom: 10px; }
-        .select-label { display: block; margin-bottom: 5px; font-size: 14px; color: #666; text-align: right; }
+        .product-card { background: white; padding: 15px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.06); text-align: center; display: flex; flex-direction: column; }
+        .product-img { width: 100%; height: 220px; border-radius: 10px; object-fit: contain; margin-bottom: 15px; background: #fff; }
+        .product-name { font-size: 18px; font-weight: bold; color: #2c3e50; margin-bottom: 10px; }
+        .select-label { display: block; margin-bottom: 8px; font-size: 14px; color: #666; font-weight: bold; text-align: right; }
         .size-select { width: 100%; padding: 10px; border-radius: 8px; border: 2px solid #eee; font-family: 'Cairo'; margin-bottom: 15px; cursor: pointer; }
-        .order-btn { background-color: #25d366; color: white; border: none; padding: 12px; border-radius: 10px; text-decoration: none; font-size: 15px; display: block; font-weight: bold; cursor: pointer; }
-        footer { text-align: center; padding: 30px; color: #999; font-size: 13px; }
+        .order-btn { background-color: #25d366; color: white; border: none; padding: 12px; border-radius: 10px; text-decoration: none; font-size: 15px; display: block; font-weight: bold; cursor: pointer; width: 100%; margin-top: auto; }
+        footer { text-align: center; padding: 40px; color: #999; font-size: 13px; }
     </style>
 </head>
 <body>
@@ -30,20 +30,29 @@
 </header>
 
 <div class="container">
-    <h2 class="category-title">أدوات مكتبية</h2>
+    <h2 class="category-title">أدوات مكتبية وقرطاسية</h2>
     <div class="product-grid">
         
         <div class="product-card">
+            <img src="https://i.ibb.co/q3Qr6LVn/image.jpg" class="product-img" alt="مسطرة سيليكون ضد الكسر">
+            <div class="product-name">مسطرة سيليكون ضد الكسر</div>
+            <label class="select-label">اختر المقاس:</label>
+            <select id="siliconeSize" class="size-select">
+                <option value="20 سم" data-price="7">مقاس 20 سم - 7 ج.م</option>
+                <option value="30 سم" data-price="12">مقاس 30 سم - 12 ج.م</option>
+            </select>
+            <button onclick="sendOrder('مسطرة سيليكون ضد الكسر', 'siliconeSize')" class="order-btn">طلب عبر واتساب</button>
+        </div>
+
+        <div class="product-card">
             <img src="https://i.ibb.co/RZhq66L/image.jpg" class="product-img" alt="مسطرة شفافة">
             <div class="product-name">مسطرة بلاستيك شفافة</div>
-            
-            <label class="select-label">اختر المقاس المطلوب:</label>
-            <select id="rulerSize" class="size-select">
+            <label class="select-label">اختر المقاس:</label>
+            <select id="clearSize" class="size-select">
                 <option value="20 سم" data-price="5">مقاس 20 سم - 5 ج.م</option>
                 <option value="30 سم" data-price="10">مقاس 30 سم - 10 ج.م</option>
             </select>
-
-            <button onclick="sendOrder()" class="order-btn">طلب عبر واتساب</button>
+            <button onclick="sendOrder('مسطرة بلاستيك شفافة', 'clearSize')" class="order-btn">طلب عبر واتساب</button>
         </div>
 
     </div>
@@ -51,24 +60,24 @@
     <h2 class="category-title">الكتب الخارجية</h2>
     <div class="product-grid">
         <div class="product-card">
-            <div class="product-name">كتب جميع المراحل</div>
-            <p style="color: #666; font-size: 14px;">متاح سلاح التلميذ، الأضواء، والامتحان</p>
-            <a href="https://wa.me/201027021011?text=أريد الاستفسار عن الكتب الخارجية" class="order-btn" style="background-color: #3498db;">استفسار واتساب</a>
+            <div class="product-name">كتب جميع المراحل التعليمية</div>
+            <p style="color: #666; font-size: 14px;">سلاح التلميذ - الأضواء - الامتحان - المعاصر</p>
+            <a href="https://wa.me/201027021011?text=أريد الاستفسار عن توافر كتب خارجية" class="order-btn" style="background-color: #3498db;">استفسار عن كتاب</a>
         </div>
     </div>
 </div>
 
 <footer>
     <p>📍 مدينة السلام، القاهرة</p>
-    <p>جميع الحقوق محفوظة &copy; 2026</p>
+    <p>جميع الحقوق محفوظة لمكتبة ذاكر &copy; 2026</p>
 </footer>
 
 <script>
-    function sendOrder() {
-        const select = document.getElementById('rulerSize');
+    function sendOrder(productName, selectId) {
+        const select = document.getElementById(selectId);
         const size = select.value;
         const price = select.options[select.selectedIndex].getAttribute('data-price');
-        const message = `أهلاً مكتبة ذاكر، أريد طلب مسطرة شفافة مقاس ${size} بسعر ${price} جنيه`;
+        const message = `أهلاً مكتبة ذاكر، أريد طلب ${productName} مقاس ${size} بسعر ${price} جنيه`;
         window.open(`https://wa.me/201027021011?text=${encodeURIComponent(message)}`, '_blank');
     }
 </script>
