--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
         body { font-family: 'Cairo', sans-serif; background-color: #f8f9fa; margin: 0; padding: 0; color: #333; }
         header { background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: white; padding: 25px 15px; text-align: center; }
         .logo { width: 80px; height: 80px; border-radius: 50%; border: 3px solid white; background: white; margin-bottom: 10px; object-fit: cover; }
-        .container { padding: 15px; max-width: 1000px; margin: auto; }
+        .container { padding: 15px; max-width: 1200px; margin: auto; }
         .category-title { color: var(--primary-color); border-right: 5px solid var(--secondary-color); padding-right: 15px; margin: 30px 0 20px; font-weight: bold; font-size: 1.4rem; }
-        .product-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; }
-        .product-card { background: white; padding: 15px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.06); text-align: center; display: flex; flex-direction: column; }
-        .product-img { width: 100%; height: 220px; border-radius: 10px; object-fit: contain; margin-bottom: 15px; background: #fff; }
-        .product-name { font-size: 18px; font-weight: bold; color: #2c3e50; margin-bottom: 10px; }
-        .select-label { display: block; margin-bottom: 8px; font-size: 14px; color: #666; font-weight: bold; text-align: right; }
-        .size-select { width: 100%; padding: 10px; border-radius: 8px; border: 2px solid #eee; font-family: 'Cairo'; margin-bottom: 15px; cursor: pointer; }
-        .order-btn { background-color: #25d366; color: white; border: none; padding: 12px; border-radius: 10px; text-decoration: none; font-size: 15px; display: block; font-weight: bold; cursor: pointer; width: 100%; margin-top: auto; }
-        footer { text-align: center; padding: 40px; color: #999; font-size: 13px; }
+        .product-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
+        .product-card { background: white; padding: 15px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.06); text-align: center; display: flex; flex-direction: column; transition: 0.3s; }
+        .product-card:hover { transform: translateY(-5px); }
+        .product-img { width: 100%; height: 200px; border-radius: 10px; object-fit: contain; margin-bottom: 15px; background: #fff; }
+        .product-name { font-size: 17px; font-weight: bold; color: #2c3e50; margin-bottom: 10px; height: 50px; display: flex; align-items: center; justify-content: center; }
+        .select-label { display: block; margin-bottom: 8px; font-size: 13px; color: #666; font-weight: bold; text-align: right; }
+        .size-select { width: 100%; padding: 8px; border-radius: 8px; border: 2px solid #eee; font-family: 'Cairo'; margin-bottom: 15px; cursor: pointer; }
+        .price-box { font-size: 16px; color: var(--accent-color); font-weight: bold; margin-bottom: 15px; }
+        .order-btn { background-color: #25d366; color: white; border: none; padding: 12px; border-radius: 10px; text-decoration: none; font-size: 14px; display: block; font-weight: bold; cursor: pointer; width: 100%; margin-top: auto; }
+        footer { text-align: center; padding: 40px; color: #999; font-size: 12px; }
     </style>
 </head>
 <body>
@@ -34,39 +36,22 @@
     <div class="product-grid">
         
         <div class="product-card">
+            <img src="https://i.ibb.co/6RnvW32C/image.jpg" class="product-img" alt="استيكي نوت فواصل">
+            <div class="product-name">استيكي نوت فواصل ملونة</div>
+            <div class="price-box">السعر: 10 ج.م</div>
+            <button onclick="sendDirectOrder('استيكي نوت فواصل', '10')" class="order-btn">طلب عبر واتساب</button>
+        </div>
+
+        <div class="product-card">
+            <img src="https://i.ibb.co/dwvfDC7S/image.jpg" class="product-img" alt="صلصال فوم">
+            <div class="product-name">صلصال فوم (دستة)</div>
+            <div class="price-box">السعر: 20 ج.م</div>
+            <button onclick="sendDirectOrder('صلصال فوم دستة', '20')" class="order-btn">طلب عبر واتساب</button>
+        </div>
+
+        <div class="product-card">
             <img src="https://i.ibb.co/5XZTTv8D/image.jpg" class="product-img" alt="بالتة ألوان مياه">
             <div class="product-name">بالتة ألوان مياه</div>
             <label class="select-label">اختر الحجم:</label>
             <select id="paintSize" class="size-select">
-                <option value="صغير" data-price="25">حجم صغير - 25 ج.م</option>
-                <option value="وسط" data-price="30">حجم وسط - 30 ج.م</option>
-                <option value="كبير" data-price="35">حجم كبير - 35 ج.م</option>
-            </select>
-            <button onclick="sendOrder('بالتة ألوان مياه', 'paintSize')" class="order-btn">طلب عبر واتساب</button>
-        </div>
-
-        <div class="product-card">
-            <img src="https://i.ibb.co/Ps58QtrZ/image.jpg" class="product-img" alt="قلم سنون جيدو">
-            <div class="product-name">قلم سنون ميكرو جيدو</div>
-            <label class="select-label">اختر السن:</label>
-            <select id="jedoSize" class="size-select">
-                <option value="0.7 مم" data-price="25">سن 0.7 مم - 25 ج.م</option>
-                <option value="0.9 مم" data-price="25">سن 0.9 مم - 25 ج.م</option>
-            </select>
-            <button onclick="sendOrder('قلم سنون جيدو', 'jedoSize')" class="order-btn">طلب عبر واتساب</button>
-        </div>
-
-        <div class="product-card">
-            <img src="https://i.ibb.co/q3Qr6LVn/image.jpg" class="product-img" alt="مسطرة سيليكون">
-            <div class="product-name">مسطرة سيليكون ضد الكسر</div>
-            <label class="select-label">اختر المقاس:</label>
-            <select id="siliconeSize" class="size-select">
-                <option value="20 سم" data-price="7">مقاس 20 سم - 7 ج.م</option>
-                <option value="30 سم" data-price="12">مقاس 30 سم - 12 ج.م</option>
-            </select>
-            <button onclick="sendOrder('مسطرة سيليكون ضد الكسر', 'siliconeSize')" class="order-btn">طلب عبر واتساب</button>
-        </div>
-
-        <div class="product-card">
-            <img src="https://i.ibb.co/RZhq66L/image.jpg" class="product-img" alt="مسطرة شفافة">
-            <div class="
+                <option value="صغير" data-price="25">حجم صغير - 25 ج.
