--- a/index.html
+++ b/index.html
@@ -11,16 +11,24 @@
         header { background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: white; padding: 25px 15px; text-align: center; }
         .logo { width: 80px; height: 80px; border-radius: 50%; border: 3px solid white; background: white; margin-bottom: 10px; object-fit: cover; }
         .container { padding: 15px; max-width: 1200px; margin: auto; }
-        .category-title { color: var(--primary-color); border-right: 5px solid var(--secondary-color); padding-right: 15px; margin: 30px 0 20px; font-weight: bold; font-size: 1.4rem; }
-        .product-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
+        .category-title { color: var(--primary-color); border-right: 5px solid var(--secondary-color); padding-right: 15px; margin: 30px 0 20px; font-weight: bold; font-size: 1.4rem; text-align: right; }
+        
+        /* تحسين الشبكة لضمان ظهور الكل */
+        .product-grid { 
+            display: grid; 
+            grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)); 
+            gap: 25px; 
+            justify-content: center;
+        }
+
         .product-card { background: white; padding: 15px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.06); text-align: center; display: flex; flex-direction: column; transition: 0.3s; }
         .product-card:hover { transform: translateY(-5px); }
         .product-img { width: 100%; height: 200px; border-radius: 10px; object-fit: contain; margin-bottom: 15px; background: #fff; }
-        .product-name { font-size: 17px; font-weight: bold; color: #2c3e50; margin-bottom: 10px; height: 50px; display: flex; align-items: center; justify-content: center; }
+        .product-name { font-size: 17px; font-weight: bold; color: #2c3e50; margin-bottom: 10px; min-height: 45px; display: flex; align-items: center; justify-content: center; }
         .select-label { display: block; margin-bottom: 8px; font-size: 13px; color: #666; font-weight: bold; text-align: right; }
-        .size-select { width: 100%; padding: 8px; border-radius: 8px; border: 2px solid #eee; font-family: 'Cairo'; margin-bottom: 15px; cursor: pointer; }
-        .price-box { font-size: 16px; color: var(--accent-color); font-weight: bold; margin-bottom: 15px; }
-        .order-btn { background-color: #25d366; color: white; border: none; padding: 12px; border-radius: 10px; text-decoration: none; font-size: 14px; display: block; font-weight: bold; cursor: pointer; width: 100%; margin-top: auto; }
+        .size-select { width: 100%; padding: 10px; border-radius: 8px; border: 2px solid #eee; font-family: 'Cairo'; margin-bottom: 15px; cursor: pointer; background: #fff; }
+        .price-box { font-size: 18px; color: var(--accent-color); font-weight: bold; margin-bottom: 15px; }
+        .order-btn { background-color: #25d366; color: white; border: none; padding: 14px; border-radius: 10px; text-decoration: none; font-size: 15px; display: block; font-weight: bold; cursor: pointer; width: 100%; margin-top: auto; }
         footer { text-align: center; padding: 40px; color: #999; font-size: 12px; }
     </style>
 </head>
@@ -36,22 +44,21 @@
     <div class="product-grid">
         
         <div class="product-card">
-            <img src="https://i.ibb.co/6RnvW32C/image.jpg" class="product-img" alt="استيكي نوت فواصل">
+            <img src="https://i.ibb.co/6RnvW32C/image.jpg" class="product-img" alt="استيكي نوت">
             <div class="product-name">استيكي نوت فواصل ملونة</div>
-            <div class="price-box">السعر: 10 ج.م</div>
+            <div class="price-box">10 ج.م</div>
             <button onclick="sendDirectOrder('استيكي نوت فواصل', '10')" class="order-btn">طلب عبر واتساب</button>
         </div>
 
         <div class="product-card">
             <img src="https://i.ibb.co/dwvfDC7S/image.jpg" class="product-img" alt="صلصال فوم">
             <div class="product-name">صلصال فوم (دستة)</div>
-            <div class="price-box">السعر: 20 ج.م</div>
+            <div class="price-box">20 ج.م</div>
             <button onclick="sendDirectOrder('صلصال فوم دستة', '20')" class="order-btn">طلب عبر واتساب</button>
         </div>
 
         <div class="product-card">
-            <img src="https://i.ibb.co/5XZTTv8D/image.jpg" class="product-img" alt="بالتة ألوان مياه">
+            <img src="https://i.ibb.co/5XZTTv8D/image.jpg" class="product-img" alt="بالتة ألوان">
             <div class="product-name">بالتة ألوان مياه</div>
             <label class="select-label">اختر الحجم:</label>
             <select id="paintSize" class="size-select">
-                <option value="صغير" data-price="25">حجم صغير - 25 ج.
